# app-georgias

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  secrets_manager.py
backend/agent_config/: __init__.py  default_configs.json  models.py  router.py
backend/articles/: models.py  router.py
backend/auth/: google.py  session.py
backend/db/: firestore.py
backend/personas/: __init__.py  models.py  router.py
backend/pipeline/: agents.py  models.py  router.py
backend/tests/: conftest.py  test_agent_config.py  test_articles.py  test_auth.py  test_personas.py  test_pipeline.py
backend/users/: allowed_users.json  validator.py
frontend/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/generator/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/personas/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AgentEditor.tsx  GoogleLoginButton.tsx  MarkdownRenderer.tsx  Navbar.tsx  PipelineProgress.tsx  ProtectedRoute.tsx  StepResult.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
