[project]
name = "thales-backend"
version = "0.1.0"
description = "FastAPI backend for Thales template"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "google-auth",
    "httpx",
    "pydantic",
    "PyJWT",
    "python-dotenv",
    "requests",
    "uvicorn[standard]",
]

[tool.uv]
package = false
